# chrenderopengl

./: CMakeLists.txt  README.md  build.sh
src/: chrender.cpp  core.h  edge_f.glsl  graph_basics.cpp  graph_basics.h  json.h  tp_client.cpp  tp_client.h  tp_tester.h  tpclient.cpp  tpclient.h  types.h
vs2013/simplestGraphRendering/: simplestGraphRendering.vcxproj
